--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -12,7 +12,12 @@
     />
     <meta name="author" content="Uros Zikic" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,59 +29,207 @@
     <title>Jadore</title>
   </head>
   <body>
-    <nav class="navigation">
-      <div class="nav-top">
-        <div class="nav-contact">
-          <div>
-            <ion-icon name="call-outline"></ion-icon>
-            <span>123456789</span>
+    <header>
+      <nav class="navigation">
+        <div class="nav-top">
+          <div class="nav-contact">
+            <!-- <div>
+              <ion-icon name="call-outline"></ion-icon>
+              <span>123456789</span>
+            </div>
+            <div>
+              <ion-icon name="mail-outline"></ion-icon>
+              <span>jadore@gmail.com</span>
+            </div>  -->
+            <div>
+              <ion-icon name="time-outline"></ion-icon>
+              <span class="open-close"></span>
+            </div>
           </div>
-          <div>
-            <ion-icon name="mail-outline"></ion-icon>
-            <span>jadore@gmail.com</span>
+          <select name="lang" id="">
+            <option value="UA">UA</option>
+            <option value="RU">RU</option>
+          </select>
+        </div>
+
+        <div class="nav-mid">
+          <!-- logo -->
+          <div class="nav-logo">
+            <img
+              src="../public/images/logos/store-logo.png"
+              alt="a logo resembling a perfume"
+            />
+            <span>jadore</span>
+          </div>
+
+          <form action="">
+            <div class="prompt-container">
+              <label for="search"></label>
+              <input
+                type="text"
+                placeholder="search"
+                name="search"
+                class="search-prompt"
+              />
+              <ion-icon
+                name="search-outline"
+                class="prompt-magnifier"
+              ></ion-icon>
+            </div>
+          </form>
+
+          <div class="nav-cart">
+            <ion-icon name="person-outline"></ion-icon>
+            <ion-icon name="cart-outline"></ion-icon>
           </div>
         </div>
-        <select name="lang" id="">
-          <option value="UA">UA</option>
-          <option value="RU">RU</option>
-        </select>
-      </div>
 
-      <div class="nav-mid">
-        <!-- logo -->
-        <div class="nav-logo">
+        <!-- navigation content -->
+        <div class="nav-content nav-bottom">
+          <a href="#">home</a>
+          <a href="#">about</a>
+          <a href="#">services</a>
+          <a href="#">shop</a>
+          <a href="#">blog</a>
+          <a href="#">contact</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="section-one">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div>
+                <strong>Crafted to perfection</strong>
+                <a href="#">Catalogue</a>
+              </div>
+              <img
+                class="d-block w-100 carousel-image"
+                src="../public/images/perfumes/chanel.jpg"
+                alt="First slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <div>
+                <strong>Crafted to perfection</strong>
+                <a href="#">Catalogue</a>
+              </div>
+              <img
+                class="d-block w-100 carousel-image"
+                src="../public/images/perfumes/chanel.jpg"
+                alt="First slide"
+              />
+            </div>
+            <div class="carousel-item">
+              <div>
+                <strong>Crafted to perfection</strong>
+                <a href="#">Catalogue</a>
+              </div>
+              <img
+                class="d-block w-100 carousel-image"
+                src="../public/images/perfumes/chanel.jpg"
+                alt="First slide"
+              />
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExampleControls"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
+
+      <!-- section 2 -->
+      <section class="section-two">
+        <div class="section-two--grid-item">
+          <p>our offers</p>
           <img
-            src="images/logos/store-logo.png"
-            alt="a logo resembling a perfume"
+            src="../public/images/perfumes/services.jpg"
+            alt="services tailored to your needs"
           />
-          <span>jadore</span>
         </div>
-
-        <form action="">
-          <div class="prompt-container">
-            <input type="text" placeholder="search" class="search-prompt" />
-            <ion-icon name="search-outline" class="prompt-magnifier"></ion-icon>
-          </div>
-        </form>
-
-        <div class="nav-cart">
-          <ion-icon name="person-outline"></ion-icon>
-          <ion-icon name="cart-outline"></ion-icon>
+        <div class="section-two--grid-item">
+          <p>shop</p>
+          <img
+            src="../public/images/perfumes/services.jpg"
+            alt="services tailored to your needs"
+          />
         </div>
-      </div>
+        <div class="section-two--grid-item">
+          <img
+            src="../public/images/perfumes/services.jpg"
+            alt="services tailored to your needs"
+          />
+          <p>about</p>
+        </div>
+        <div class="section-two--grid-item">
+          <img
+            src="../public/images/perfumes/services.jpg"
+            alt="services tailored to your needs"
+          />
+          <p>contact us</p>
+        </div>
+      </section>
+    </main>
 
-      <!-- navigation content -->
-      <div class="nav-content nav-bottom">
-        <a href="">home</a>
-        <a href="">about</a>
-        <a href="">services</a>
-        <a href="">shop</a>
-        <a href="">blog</a>
-        <a href="">faq's</a>
-        <a href="">contact</a>
+    <footer>
+      <div class="footer-info">
+        <div>
+          <strong>contacts</strong>
+          <p>+12343435457</p>
+          <p>info@jador.com</p>
+          <p>Open Monday to Friday from 8 AM till 8 PM</p>
+          <ion-icon name="logo-instagram"></ion-icon>
+          <span>Follow us on Instagram</span>
+        </div>
+        <div class="footer-info--mid">
+          <form action="">
+            <div>
+              <strong>
+                <label for="newsletter">Subscribe to our news letter</label>
+              </strong>
+              <input
+                type="email"
+                name="newsLetter"
+                id="newsletter"
+                class="news-letter"
+                placeholder="Enter E-mail"
+                required
+              />
+            </div>
+            <div>
+              <label for="subscribe" style="display: none">x</label>
+              <input
+                type="submit"
+                value="subscribe"
+                class="subscribe"
+                name="subscribe"
+              />
+            </div>
+          </form>
+        </div>
+        <div></div>
       </div>
-    </nav>
-
+    </footer>
     <!-- my-script -->
     <script src="script.js" async></script>
     <!-- ion-icons -->
@@ -91,6 +244,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
   </body>
