--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -30,68 +30,52 @@
   </head>
   <body>
     <header>
-      <nav class="navigation">
-        <div class="nav-top">
-          <div class="nav-contact">
-            <!-- <div>
-              <ion-icon name="call-outline"></ion-icon>
-              <span>123456789</span>
-            </div>
-            <div>
-              <ion-icon name="mail-outline"></ion-icon>
-              <span>jadore@gmail.com</span>
-            </div>  -->
-            <div>
-              <ion-icon name="time-outline"></ion-icon>
-              <span class="open-close"></span>
-            </div>
-          </div>
-          <select name="lang" id="">
-            <option value="UA">UA</option>
-            <option value="RU">RU</option>
-          </select>
-        </div>
-
-        <div class="nav-mid">
-          <!-- logo -->
-          <div class="nav-logo">
-            <img
-              src="../public/images/logos/store-logo.png"
-              alt="a logo resembling a perfume"
-            />
-            <span>jadore</span>
+      <nav>
+        <div class="upper-nav">
+          <div class="logo">
+            <h1>Jadore</h1>
+            <p>Perfumes and Accessories</p>
           </div>
 
-          <form action="">
-            <div class="prompt-container">
-              <label for="search"></label>
+          <div class="browse-holder">
+            <form action="">
+              <label for="browse"></label>
+              <input type="text" name="browse" placeholder="Search" />
+              <label for="submit"></label>
               <input
-                type="text"
-                placeholder="search"
-                name="search"
-                class="search-prompt"
+                type="submit"
+                name="submit"
+                value=""
+                class="submit"
+                id="search-submit"
               />
-              <ion-icon
-                name="search-outline"
-                class="prompt-magnifier"
-              ></ion-icon>
-            </div>
-          </form>
+            </form>
+            <ion-icon name="search-sharp" class="magnifier"></ion-icon>
+          </div>
+
+          <div class="log-in">
+            <a href="#">Sign in</a>
+            <div></div>
+            <a href="#">Register Account</a>
+          </div>
 
           <div class="nav-cart">
-            <ion-icon name="person-outline"></ion-icon>
+            <select name="language" id="">
+              <option value="UA">UA</option>
+              <option value="RU">RU</option>
+            </select>
             <ion-icon name="cart-outline"></ion-icon>
           </div>
         </div>
-
-        <!-- navigation content -->
-        <div class="nav-content nav-bottom">
-          <a href="#">home</a>
-          <a href="#">about</a>
-          <a href="#">services</a>
-          <a href="#">shop</a>
-          <a href="#">blog</a>
-          <a href="#">contact</a>
+        <!-- bottom nav -->
+        <div class="bottom-nav">
+          <a href="#">full size vials</a>
+          <a href="#">3ml vials</a>
+          <a href="#">Catalogue</a>
+          <a href="#">About us</a>
+          <a href="#">Delivery</a>
+          <a href="#">Blog</a>
+          <a href="#">Contacts</a>
         </div>
       </nav>
     </header>
@@ -104,36 +88,36 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div>
-                <strong>Crafted to perfection</strong>
-                <a href="#">Catalogue</a>
+              <div class="carousel-cta">
+                <h2>Original perfumes</h2>
+                <a href="#">Choose</a>
               </div>
               <img
-                class="d-block w-100 carousel-image"
-                src="../public/images/perfumes/chanel.jpg"
+                class="d-block w-100"
+                src="../public/images/perfumes/image-3.jpg"
                 alt="First slide"
               />
             </div>
             <div class="carousel-item">
-              <div>
-                <strong>Crafted to perfection</strong>
-                <a href="#">Catalogue</a>
+              <div class="carousel-cta">
+                <h2>Original perfumes</h2>
+                <a href="#">Choose</a>
               </div>
               <img
-                class="d-block w-100 carousel-image"
-                src="../public/images/perfumes/chanel.jpg"
-                alt="First slide"
+                class="d-block w-100"
+                src="../public/images/perfumes/image-dark-1.png"
+                alt="Second slide"
               />
             </div>
             <div class="carousel-item">
-              <div>
-                <strong>Crafted to perfection</strong>
-                <a href="#">Catalogue</a>
+              <div class="carousel-cta">
+                <h2>Original perfumes</h2>
+                <a href="#">Choose</a>
               </div>
               <img
-                class="d-block w-100 carousel-image"
-                src="../public/images/perfumes/chanel.jpg"
-                alt="First slide"
+                class="d-block w-100"
+                src="../public/images/perfumes/image-dark-1.png"
+                alt="Third slide"
               />
             </div>
           </div>
@@ -157,79 +141,48 @@
           </a>
         </div>
       </section>
-
-      <!-- section 2 -->
-      <section class="section-two">
-        <div class="section-two--grid-item">
-          <p>our offers</p>
-          <img
-            src="../public/images/perfumes/services.jpg"
-            alt="services tailored to your needs"
-          />
+      <!-- GRID -->
+      <section>
+        <div class="grid-holder">
+          <div class="grid-inner">
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                facere unde fugit voluptates est dolorum quia labore, repellat
+                perspiciatis? Voluptates temporibus facere ratione officia
+                perferendis beatae aliquid asperiores, neque reiciendis?
+              </p>
+            </div>
+            <div>
+              <img src="../public/images/perfumes/image-4.jpg" alt="" />
+            </div>
+          </div>
+          <div class="grid-inner">
+            <div>
+              <img src="../public/images/perfumes/image-5.jpg" alt="" />
+            </div>
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                facere unde fugit voluptates est dolorum quia labore, repellat
+                perspiciatis? Voluptates temporibus facere ratione officia
+                perferendis beatae aliquid asperiores, neque reiciendis?
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="section-two--grid-item">
-          <p>shop</p>
-          <img
-            src="../public/images/perfumes/services.jpg"
-            alt="services tailored to your needs"
-          />
-        </div>
-        <div class="section-two--grid-item">
-          <img
-            src="../public/images/perfumes/services.jpg"
-            alt="services tailored to your needs"
-          />
-          <p>about</p>
-        </div>
-        <div class="section-two--grid-item">
-          <img
-            src="../public/images/perfumes/services.jpg"
-            alt="services tailored to your needs"
-          />
-          <p>contact us</p>
-        </div>
+      </section>
+      <!-- best sellers -->
+      <section class="best-seller--holder">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </section>
     </main>
 
-    <footer>
-      <div class="footer-info">
-        <div>
-          <strong>contacts</strong>
-          <p>+12343435457</p>
-          <p>info@jador.com</p>
-          <p>Open Monday to Friday from 8 AM till 8 PM</p>
-          <ion-icon name="logo-instagram"></ion-icon>
-          <span>Follow us on Instagram</span>
-        </div>
-        <div class="footer-info--mid">
-          <form action="">
-            <div>
-              <strong>
-                <label for="newsletter">Subscribe to our news letter</label>
-              </strong>
-              <input
-                type="email"
-                name="newsLetter"
-                id="newsletter"
-                class="news-letter"
-                placeholder="Enter E-mail"
-                required
-              />
-            </div>
-            <div>
-              <label for="subscribe" style="display: none">x</label>
-              <input
-                type="submit"
-                value="subscribe"
-                class="subscribe"
-                name="subscribe"
-              />
-            </div>
-          </form>
-        </div>
-        <div></div>
-      </div>
-    </footer>
+    <footer></footer>
     <!-- my-script -->
     <script src="script.js" async></script>
     <!-- ion-icons -->
