FE commit landing page

--- a/jadore/src/contact.html
+++ b/jadore/src/contact.html
@@ -19,7 +19,7 @@
     />
 
     <title>Contacts</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
   </head>
   <body>
     <main>
