--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -24,7 +24,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/query.css" />
 
     <title>Jadore</title>
   </head>
@@ -60,6 +61,11 @@
           </div>
 
           <div class="nav-cart">
+            <ion-icon
+              name="menu-outline"
+              class="open-menu"
+              onclick="oMenu()"
+            ></ion-icon>
             <select name="language" id="">
               <option value="UA">UA</option>
               <option value="RU">RU</option>
@@ -75,9 +81,30 @@
           <a href="#">About us</a>
           <a href="#">Delivery</a>
           <a href="#">Blog</a>
-          <a href="#">Contacts</a>
+          <a href="contact.html">Contacts</a>
         </div>
       </nav>
+
+      <!-- slider-menu width < 800px  -->
+      <div class="slider-menu">
+        <div style="border-bottom: 1px solid white">
+          <div>
+            <p>Menu</p>
+          </div>
+          <ion-icon
+            name="close-outline"
+            class="close-menu"
+            onclick="cMenu()"
+          ></ion-icon>
+        </div>
+        <a href="#">full size vials</a>
+        <a href="#">3ml vials</a>
+        <a href="#">Catalogue</a>
+        <a href="#">About us</a>
+        <a href="#">Delivery</a>
+        <a href="#">Blog</a>
+        <a href="contact.html">Contacts</a>
+      </div>
     </header>
     <main>
       <section class="section-one">
@@ -94,7 +121,7 @@
               </div>
               <img
                 class="d-block w-100"
-                src="../public/images/perfumes/image-3.jpg"
+                src="../public/images/perfumes/image-9.jpg"
                 alt="First slide"
               />
             </div>
@@ -116,7 +143,7 @@
               </div>
               <img
                 class="d-block w-100"
-                src="../public/images/perfumes/image-dark-1.png"
+                src="../public/images/perfumes/image-11.jpg"
                 alt="Third slide"
               />
             </div>
@@ -142,7 +169,7 @@
         </div>
       </section>
       <!-- GRID -->
-      <section>
+      <section class="grid-section">
         <div class="grid-holder">
           <div class="grid-inner">
             <div>
@@ -154,14 +181,20 @@
               </p>
             </div>
             <div>
-              <img src="../public/images/perfumes/image-4.jpg" alt="" />
+              <img
+                src="../public/images/perfumes/image-9.jpg"
+                alt="fragrant perfumes"
+              />
             </div>
           </div>
           <div class="grid-inner">
             <div>
-              <img src="../public/images/perfumes/image-5.jpg" alt="" />
+              <img
+                src="../public/images/perfumes/image-8.jpg"
+                alt="our offer of perfumes"
+              />
             </div>
-            <div>
+            <div class="row-1">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
                 facere unde fugit voluptates est dolorum quia labore, repellat
@@ -174,17 +207,124 @@
       </section>
       <!-- best sellers -->
       <section class="best-seller--holder">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="best-seller--inner">
+          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
+          <div class="best-seller--info">
+            <p>Eternal Blossom</p>
+            <p>
+              Enchanting floral blend, lingering aroma of blooming gardens and
+              romance.
+            </p>
+            <select name="" id="">
+              <option value="big">100ml</option>
+              <option value="small">3ml</option>
+            </select>
+            <a href="#">Buy</a>
+          </div>
+        </div>
+
+        <div class="best-seller--inner">
+          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
+          <div class="best-seller--info">
+            <p>Velvet Noir</p>
+            <p>
+              Enchanting floral blend, lingering aroma of blooming gardens and
+              romance.
+            </p>
+            <select name="" id="">
+              <option value="big">100ml</option>
+              <option value="small">3ml</option>
+            </select>
+            <a href="#">Buy</a>
+          </div>
+        </div>
+        <div class="best-seller--inner">
+          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
+          <div class="best-seller--info">
+            <p>Ocean Breeze</p>
+            <p>
+              Enchanting floral blend, lingering aroma of blooming gardens and
+              romance.
+            </p>
+            <select name="" id="">
+              <option value="big">100ml</option>
+              <option value="small">3ml</option>
+            </select>
+            <a href="#">Buy</a>
+          </div>
+        </div>
+        <div class="best-seller--inner">
+          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
+          <div class="best-seller--info">
+            <p>Mystic Woods</p>
+            <p>
+              Enchanting floral blend, lingering aroma of blooming gardens and
+              romance.
+            </p>
+            <select name="" id="">
+              <option value="big">100ml</option>
+              <option value="small">3ml</option>
+            </select>
+            <a href="#">Buy</a>
+          </div>
+        </div>
+
+        <div class="best-seller--inner">
+          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
+          <div class="best-seller--info">
+            <p>Mystic Woods</p>
+            <p>
+              Enchanting floral blend, lingering aroma of blooming gardens and
+              romance.
+            </p>
+            <select name="" id="">
+              <option value="big">100ml</option>
+              <option value="small">3ml</option>
+            </select>
+            <a href="#">Buy</a>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-info">
+        <h1>Contact us:</h1>
+        <div class="cta">
+          <div class="contact-info">
+            <div>
+              <ion-icon name="call-outline"></ion-icon>
+              <p>061987643</p>
+            </div>
+            <div>
+              <ion-icon name="mail-outline"></ion-icon>
+              <p>jador@gmail.com</p>
+            </div>
+            <div>
+              <ion-icon name="time-outline"></ion-icon>
+              <p>Open Monday to Friday (08-18)h</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <form action="">
+          <div>
+            <label for="newsletter">Subscribe to our newsletter</label>
+            <input type="email" name="newsletter" placeholder="Enter email" />
+          </div>
+          <label for="subscribe"></label>
+          <input name="subscribe" type="submit" value="subscribe" />
+        </form>
+      </div>
+      <div class="credits">
+        <p>Website developed by:</p>
+        <a href="#" target="_blank" rel="noopener">Uros (Front-end)</a>
+        <a href="#" target="_blank" rel="noopener">Aleksa (Back-end)</a>
+      </div>
+    </footer>
     <!-- my-script -->
-    <script src="script.js" async></script>
+    <script src="FE scripts/script.js"></script>
     <!-- ion-icons -->
     <script
       type="module"
