--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -168,22 +168,19 @@
         <div class="grid-inner">
           <img src="../public/images/perfumes/image-13.jpg" alt="grid-image" />
           <div class="grid-info">
-            <p>Perfume Name</p>
-            <a href="#">Perfume Link</a>
+            <a href="#">Perfume Name - Link</a>
           </div>
         </div>
         <div class="grid-inner">
           <img src="../public/images/perfumes/image-14.jpg" alt="grid-image" />
           <div class="grid-info">
-            <p>Perfume Name</p>
-            <a href="#">Perfume Link</a>
+            <a href="#">Perfume Name - Link</a>
           </div>
         </div>
         <div class="grid-inner">
           <img src="../public/images/perfumes/image-15.jpg" alt="grid-image" />
           <div class="grid-info">
-            <p>Perfume Name</p>
-            <a href="#">Perfume Link</a>
+            <a href="#">Perfume Name - Link</a>
           </div>
         </div>
       </section>
@@ -197,6 +194,57 @@
         >
           <div class="carousel-inner best-seller--inner">
             <div class="carousel-item best-seller--item active">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
               <div class="card">
                 <img
                   src="../public/images/perfumes/image-1.jpg"
@@ -353,7 +401,7 @@
       </div>
       <div class="credits">
         <p>Website developed by:</p>
-        <a href="#" target="_blank" rel="noopener">Uros (Front-end)</a>
+        <a href="#" target="_blank" rel="noopener">Uroš (Front-end)</a>
         <a href="#" target="_blank" rel="noopener">Aleksa (Back-end)</a>
       </div>
     </footer>
