landing page update

--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -110,7 +110,7 @@
     <main>
       <section class="section-one">
         <div
-          id="carouselExampleControls1"
+          id="carouselExampleControlsFirst"
           class="carousel slide"
           data-bs-ride="carousel"
         >
@@ -143,18 +143,18 @@
             </div>
           </div>
           <button
-            class="carousel-control-prev"
+            class="carousel-control-prev-first"
             type="button"
-            data-bs-target="#carouselExampleControls1"
+            data-bs-target="#carouselExampleControlsFirst"
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
           <button
-            class="carousel-control-next"
+            class="carousel-control-next-first"
             type="button"
-            data-bs-target="#carouselExampleControls1"
+            data-bs-target="#carouselExampleControlsFirst"
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -195,11 +195,13 @@
           <div class="carousel-inner best-seller--inner">
             <div class="carousel-item best-seller--item active">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-1.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -212,11 +214,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-2.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -229,11 +233,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-3.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -246,11 +252,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-4.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -263,11 +271,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-5.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -280,11 +290,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-6.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -297,11 +309,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-7.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -314,11 +328,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-8.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -331,11 +347,13 @@
             </div>
             <div class="carousel-item best-seller--item">
               <div class="card">
-                <img
-                  src="../public/images/perfumes/image-1.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
+                <div class="img-wrapper">
+                  <img
+                    src="../public/images/perfumes/image-9.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">
@@ -366,6 +384,8 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+
+        <!-- x -->
       </section>
     </main>
 
